--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, message: String)(content: Html)
 
 <!DOCTYPE html>
 
@@ -8,6 +8,36 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        @if(message == "Map") {
+ <script src="http://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js?key=Fmjtd%7Cluubn9uan9%2Cal%3Do5-902296"></script>
+ 
+ <script type="text/javascript">
+ 
+   /*An example of using the MQA.EventUtil to hook into the window load event and execute defined function
+   passed in as the last parameter. You could alternatively create a plain function here and have it
+   executed whenever you like (e.g. <body onload="yourfunction">).*/
+ 
+   MQA.EventUtil.observe(window, 'load', function() {
+    
+     /*Create an object for options*/
+     var options={
+       elt: document.getElementById('map'),           /*ID of element on the page where you want the map added*/
+       zoom: 13,               
+	   /*initial zoom level of the map*/
+       latLng: { lat: 49.48703, lng: 8.46625 },		   /*center of map in latitude/longitude */
+       mtype: 'osm',                                  /*map type (osm)*/
+       bestFitMargin: 0,                              /*margin offset from the map viewport when applying a bestfit on shapes*/
+       zoomOnDoubleClick: true                        /*zoom in when double-clicking on map*/
+     };
+ 
+     /*Construct an instance of MQA.TileMap with the options object*/
+     window.map = new MQA.TileMap(options);
+   });
+ 
+ </script>
+        
+        
+        }
     </head>
     <body>
         @content
