--- a/app/views/map.scala.html
+++ b/app/views/map.scala.html
@@ -3,7 +3,7 @@
 @main("Welcome to SEM", message) {
 	<div id="main">
 		<input id="index-search" class="searchbar" name="search" type="text" placeholder="Enter or artist name here..." value=""/>
-		<button id="index-submit" class="submit">SEND</button>
+		<button id="mapbutton">send</button>
 	</div>
 	<div id="map" style="width:800; height:500;"></div>
 }
