--- a/.target/views/main.scala.html
+++ b/.target/views/main.scala.html
@@ -9,14 +9,14 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         @if(message == "Map") {
+			<script src="@routes.Assets.at("javascripts/map/map.js")" type="text/javascript"></script>
 			<script src="http://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js?key=Fmjtd%7Cluubn9uan9%2Cal%3Do5-902296"></script>
- 
 			<script type="text/javascript">
  
 			   /*An example of using the MQA.EventUtil to hook into the window load event and execute defined function
 			   passed in as the last parameter. You could alternatively create a plain function here and have it
 			   executed whenever you like (e.g. <body onload="yourfunction">).*/
-			 
+			 var map;
 				MQA.EventUtil.observe(window, 'load', function() {
 				
 					// Create an object for options
@@ -31,7 +31,7 @@
 					};
 				 
 					// Construct an instance of MQA.TileMap with the options object
-					window.map = new MQA.TileMap(options);
+					map = new MQA.TileMap(options);
 					 
 					// add controls
 					MQA.withModule('largezoom','viewoptions','geolocationcontrol','insetmapcontrol','mousewheel', function() {
