--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,14 +12,22 @@
 	background-position: initial initial; 
 	background-repeat: initial initial;
 }
+#overlay {
+    /*position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
+    z-index: 10000;*/
+}
 #map {
-	top: 0px;
-	left: 0; 
-  	bottom: 0; 
-  	right: 0;
-  	position: relative;
-	width: 99%;
-	height: 100%; 
+
+	margin : 0px;
 }
 
 #main #index-search-items 
@@ -45,6 +53,7 @@
 
 body {
 	background-color: #41B7D8;
+	overflow: hidden;
 }
 
 dt label {
