--- a/.target/views/main.scala.html
+++ b/.target/views/main.scala.html
@@ -10,7 +10,6 @@
 		<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 		<script src="@routes.Assets.at("javascripts/jquery-1.9.1.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/jquery-ui-1.10.3.custom.min.js")" type="text/javascript"></script>
-		@if(message == "Map") {
 		<script src="@routes.Assets.at("javascripts/map/map.js")" type="text/javascript"></script>
 		<script src="http://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js?key=Fmjtd%7Cluubn9uan9%2Cal%3Do5-902296"></script>
 		<script type="text/javascript">
@@ -64,35 +63,25 @@
 					});
 				});
 				$(function() {
-					$("#dpanel").html("<h1>SEM</h1><h3>Semantic Event Map</h3>");
-					$("#dpanel").css({
-						"display" : "block",
-						"position" : "relative",
-						"top": "20px",
-						"width" : "38%",
-						"left" : "30%",
-						"font-size": "30px",
-						"padding" : "1%",
-						"text-align" : "center"
-					});
+					$("#dpanel").html("<h1>SEM</h1><h3>Semantic Event Map</h3>").addClass("maxi");
 				});
 			} else {
 				MQA = new Object();
+				MQA.fake = true;
 				// show error
 				$(function() {
 					$("#dpanel").html("<b>#ERROR: Map could not be loaded.</b><br />Your internet connection might not be working correctly.");
 					$("#dpanel").css({
 						"position" : "relative",
-						"top": "20px",
+						"top" : "20px",
 						"width" : "30%",
 						"left" : "30%",
-						"font-size": "25px",
+						"font-size" : "25px",
 						"padding" : "5%"
 					}).show("fade", "slow").addClass("error", 1000);
 				});
 			}
 		</script>
-		}
 	</head>
 	<body>
 		@content
