--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -63,20 +63,11 @@
 					});
 				});
 				$(function() {
-					$("#dpanel").html("<h1>SEM</h1><h3>Semantic Event Map</h3>");
-					$("#dpanel").css({
-						"display" : "block",
-						"position" : "relative",
-						"top" : "20px",
-						"width" : "38%",
-						"left" : "30%",
-						"font-size" : "30px",
-						"padding" : "1%",
-						"text-align" : "center"
-					});
+					$("#dpanel").html("<h1>SEM</h1><h3>Semantic Event Map</h3>").addClass("maxi");
 				});
 			} else {
 				MQA = new Object();
+				MQA.fake = true;
 				// show error
 				$(function() {
 					$("#dpanel").html("<b>#ERROR: Map could not be loaded.</b><br />Your internet connection might not be working correctly.");
