--- a/app/views/map.scala.html
+++ b/app/views/map.scala.html
@@ -4,7 +4,7 @@
 
 @main("Welcome to SEM", message) {
 <div id="container">
-	<div id='dpanel' style='display:none;'></div>
+	<div id='dpanel'></div>
 	<div id="overlay" class="shadow center ui-corner-all">
 		<input id="query" type="text" name="query" class="text ui-widget-content ui-corner-all" value="" placeholder="Enter name of artist or location or venue here..." title="e.g. Volbeat, Lady Gaga, Mannheim, Germany" />
 		</input>
