--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,53 +2,93 @@ body {
 	background-color: #FFF;
 	overflow: hidden;
 	font: 70% "Trebuchet MS", sans-serif;
+	margin: 0px;
 }
 div {
 	margin: 0px;
 	padding: 0px;
 }
 h1, h3 {
-	margin : 0px;
-	padding : 0px;
+	margin: 0px;
+	padding: 0px;
 	top: 0px;
+}
+div#overlay h1 {
+	font-size: 36px;
+	margin-left: 85%;
+	margin-right: 4%;
+	margin-top: 1.5%;
 }
 #main {
 	width: 100%;
 	height: 100%;
 }
-div#overlay.center input, div#overlay.center div, div#overlay.center button {
+div#overlay input, div#overlay div, div#overlay button {
 	margin: 0.5%;
 }
-div#overlay.header {
-	width: 100%;
-	position: relative;
+div#overlay {
+	width: 50%;
+	height: 150px;
+	background-color: #fff;
 }
-#offline-error-msg {
+div#overlay.header {
+	vertical-align: middle;
+	position: relative;
+	left: 0%;
+	z-index: 9999;
+	height: 52px;
+	width: 100%;
+}
+div#overlay.header div, div#overlay.header h1 {
+	float: left;
+	margin: 4px;
+	padding: 4px;
+	vertical-align: middle;
+}
+div#overlay.header div {
+	margin-top: 0.9%;
+}
+div#overlay.header button {
+	margin-top: 1.1%;
+}
+div#overlay.header input#query, div#overlay.header button#submit {
+	float: left;
+	margin-top: 1%;
+	vertical-align: middle;
+}
+div#overlay.header input#query {
+	padding: 0.25%;
+}
 
+div#overlay input#query {
+	margin-left: 1px;
+	margin-top: 1%;
+	width: 60%;
+	height: 23px;
 }
 div#overlay.center input#query {
-	margin-left: 4%;
-	margin-top: 5%;
 	width: 90%;
-	height: 23px;
+	margin-top: 5%;
+	margin-left: 4%;
 	padding: 0.5%;
 }
-div#overlay.center div#type {
+div#overlay div#type {
 	margin-left: 4%;
 	width: 100%;
 	height: 23px;
+}
+div#overlay.header div#type {
+	width: auto;
+	margin-left: 0%;
 }
 #submit, #type {
 	display: none;
 }
-div#overlay.center button#submit {
+div#overlay button#submit {
 	float: right;
 	margin-right: 4.8%;
 	/*width: 23px;
 	 height: 23px;*/
-}
-#submit span {
-
 }
 #map {
 	display: none;
@@ -58,7 +98,25 @@ div#overlay.center button#submit {
 	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
 	box-shadow: 3px 3px 5px 6px #ccc;
 }
-
+.maxi {
+	display: block;
+	position: relative;
+	top: 20px;
+	width: 38%;
+	left: 30%;
+	font-size: 30px;
+	padding: 1%;
+	text-align: center;
+}
+.mini {
+	display: block;
+	top: 0px;
+	width: 10%;
+	left: 0px;
+	font-size: 20px;
+	padding: 1%;
+	text-align: center;
+}
 .center {
 	position: relative;
 	margin-left: 25%;
@@ -68,8 +126,6 @@ div#overlay.center button#submit {
 	 -ms-transform: translate(-50%,-50%);
 	 -moz-transform: translate(-50%,-50%);
 	 -o-transform: translate(-50%,-50%);*/
-	width: 50%;
-	height: 150px;
 }
 .error {
 	background: #cd0a0a url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x;
