Major Update on Pins
When a valid artists is being search pins will be displayed on the map.
Even for locations where no geo data or no proper adress is given. Only
Event name as information so far.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -95,6 +95,11 @@ div#overlay button#submit {
 #map div {
 	overflow: visible;
 }
+
+#map div .mqabasicwnd-client {
+	overflow : hidden;
+}
+
 .shadow {
 	-moz-box-shadow: 3px 3px 5px 6px #ccc;
 	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
