--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -134,7 +134,188 @@ div#overlay button#submit {
 	text-align: center;
 }
 .center {
+	position: relative;body {
+	background-color: #FFF;
+	overflow: hidden;
+	font: 70% "Trebuchet MS", sans-serif;
+	margin: 0px;
+}
+div {
+	margin: 0px;
+	padding: 0px;
+}
+h1, h3 {
+	margin: 0px;
+	padding: 0px;
+	top: 0px;
+}
+div#overlay h1 {
+	font-size: 36px;
+	margin-left: 85%;
+	margin-right: 4%;
+	margin-top: 1.5%;
+}
+#main {
+	width: 100%;
+	height: 100%;
+}
+div#overlay input, div#overlay div, div#overlay button {
+	margin: 0.5%;
+}
+div#overlay {
+	width: 50%;
+	height: 150px;
+	background-color: #fff;
+}
+div#overlay.header {
+	vertical-align: middle;
+	position: fixed;
+	left: 0%;
+	z-index: 9999;
+	height: 52px;
+	width: 100%;
+}
+div#overlay.header div, div#overlay.header h1 {
+	float: left;
+	margin: 4px;
+	padding: 4px;
+	vertical-align: middle;
+}
+div#overlay.header div {
+	margin-top: 0.9%;
+}
+div#overlay.header button {
+	margin-top: 1.1%;
+}
+div#overlay.header input#query, div#overlay.header button#submit {
+	float: left;
+	margin-top: 1%;
+	vertical-align: middle;
+}
+div#overlay select#radius {
+	height: 23px;
+	/*margin-top: 1.25%;*/
+	display: none;
+}
+/*div#overlay.center select#radius {
+ left: 35%;
+ top: -20%;
+ }*/
+div#overlay.header input#query {
+	padding: 0.25%;
+}
+div#overlay input#query {
+	margin-left: 1px;
+	margin-top: 1%;
+	width: 60%;
+	height: 23px;
+}
+div#overlay.center input#query {
+	width: 90%;
+	margin-top: 5%;
+	margin-left: 4%;
+	padding: 0.5%;
+}
+div#overlay div#type {
+	margin-left: 4%;
+	width: 100%;
+	height: 23px;
+}
+div#overlay.header div#type {
+	width: auto;
+	margin-left: 0%;
+}
+#submit, #type {
+	display: none;
+}
+div#overlay button#submit {
+	float: right;
+	margin-right: 4.8%;
+	/*width: 23px;
+	 height: 23px;*/
+}
+#map {
+	display: none;
+}
+#map div {
+	overflow: visible;
+}
+
+#map div .mqabasicwnd-client {
+	overflow: hidden;
+}
+
+.shadow {
+	-moz-box-shadow: 3px 3px 5px 6px #ccc;
+	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
+	box-shadow: 3px 3px 5px 6px #ccc;
+}
+.maxi {
+	display: block;
 	position: relative;
+	top: 20px;
+	width: 38%;
+	left: 30%;
+	font-size: 30px;
+	padding: 1%;
+	text-align: center;
+}
+.mini {
+	display: block;
+	top: 0px;
+	width: 10%;
+	left: 0px;
+	font-size: 20px;
+	padding: 1%;
+	text-align: center;
+}
+.center {
+	position: relative;
+	margin-left: 25%;
+	margin-top: 3%;
+	/*transform: translate(-50%, -50%);
+	 -webkit-transform: translate(-50%,-50%);
+	 -ms-transform: translate(-50%,-50%);
+	 -moz-transform: translate(-50%,-50%);
+	 -o-transform: translate(-50%,-50%);*/
+}
+#error-panel {
+	display: none;
+}
+.error {
+	background: #cd0a0a url(images/ui-bg_glass_95_fef1ec_1x400.png) 50% 50% repeat-x;
+	color: #ffffff;
+}
+/* MAPQUEST STUFF */
+
+/* information window stuff*/
+/*Override all CSS classes that reference the default InfoWindow PNG file and replace with your own custom InfoWindow.*/
+.mqabasicwnd-corner div, .mqabasicwnd-close, .mqabasicwnd-close:hover, .mqabasicwnd-pointer-bottom, .mqabasicwnd-pointer-top, .mqabasicwnd-pointer-left, .mqabasicwnd-pointer-middleLeft, .mqabasicwnd-pointer-middleRight, .mqabasicwnd-pointer-topLeft, .mqabasicwnd-pointer-topRight, .mqabasicwnd-pointer-bottomLeft, .mqabasicwnd-pointer-bottomRight, .mqabasicwnd-btop div, .mqabasicwnd-bbottom div, .mqabasicwnd-bleft div, .mqabasicwnd-bright div {
+	background-image: url("http://developer.mapquest.com/content/documentation/common/images/sprite_info_window_blue.png") !important;
+}
+
+/*Set the width of the custom InfoWindow and the font for its contents.*/
+.mqabasicwnd {
+	font: 14px arial, helvetica, sans-serif;
+	width: 300px !important;
+}
+
+/*Use CSS to place the custom 'Close' button at its desired location. Also make sure to change the width and height of the 'Close' button if it's been changed from its default size.*/
+.mqabasicwnd-close {
+	top: 0px !important;
+	right: -18px !important;
+	width: 18px !important;
+	height: 20px !important;
+}
+
+/* color */
+.panControl, .sliderWrapper, .slider, .zoomin, .zoomout, .maptoggle, .maptoggle span {
+	background-image: url("http://developer.mapquest.com/content/documentation/common/images/sprite_map_controls_blue.png") !important;
+}
+
+.min, .min:hover, .max, .max:hover {
+	background-image: url("http://developer.mapquest.com/content/documentation/common/images/min_max_blue.png") !important;
+}
 	margin-left: 25%;
 	margin-top: 3%;
 	/*transform: translate(-50%, -50%);
