--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,5 +1,4 @@
 @(title: String, message: String)(content: Html)
-
 <!DOCTYPE html>
 
 <html>
@@ -12,6 +11,13 @@
 		<script src="@routes.Assets.at("javascripts/jquery-ui-1.10.3.custom.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/map/map.js")" type="text/javascript"></script>
 		<script src="http://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js?key=Fmjtd%7Cluubn9uan9%2Cal%3Do5-902296"></script>
+		<style type="text/css">
+			@@-moz-document url-prefix() {
+			div#overlay.header button#submit {
+			margin-top: 1.2%;
+			}
+			}
+		</style>
 	</head>
 	<body>
 		@content
