--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -120,9 +120,9 @@ div#overlay button#submit {
 }
 
 .shadow {
-	-moz-box-shadow: 3px 3px 5px 6px #ccc;
-	-webkit-box-shadow: 3px 3px 5px 6px #ccc;
-	box-shadow: 3px 3px 5px 6px #ccc;
+	-moz-box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+	box-shadow: 0 4px 16px rgba(0,0,0,0.2);
 }
 .maxi {
 	display: block;
@@ -143,15 +143,52 @@ div#overlay button#submit {
 	padding: 1%;
 	text-align: center;
 }
+.mqabasicwnd {
+	-moz-box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+	box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+}
 div.mqabasicwnd, div.mqabasicwnd-content {
 	font: 12px arial, helvetica, sans-serif;
 	width: 450px !important;
 	height: auto !important;
 }
 div.mqabasicwnd img {
-	width: 90px;
-	overflow:scroll;
+	max-width: 90px;
+	max-height: 60px;
+	width: auto;
+	height: auto; !important
+	overflow: scroll;
 	float: right;
+	z-index: 1;
+	transform : scale(1);
+	transition-timing-function: ease-out;
+	transition-duration: 500ms;
+	-ms-transform: scale(1);
+	-ms-transition-timing-function: ease-out;
+	-ms-transition-duration: 500ms;
+	-webkit-transform: scale(1);
+	-webkit-transition-timing-function: ease-out;
+	-webkit-transition-duration: 500ms;
+}
+div.mqabasicwnd img:hover {
+	max-height: max-content;
+	width: auto;
+	height: auto; !important
+	overflow: hidden;
+	-moz-box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+	box-shadow: 0 4px 16px rgba(0,0,0,0.2);
+	z-index: 5000 !important;
+	transform : scale(1.25);
+	transition-timing-function: ease-out;
+	transition-duration: 500ms;
+	-ms-transform: scale(1.25);
+	-ms-transition-timing-function: ease-out;
+	-ms-transition-duration: 500ms;
+	-webkit-transform: scale(1.25);
+	-webkit-transition-timing-function: ease-out;
+	-webkit-transition-duration: 500ms;
 }
 div.mqabasicwnd hr {
 	color: gray;
