--- a/app/views/map.scala.html
+++ b/app/views/map.scala.html
@@ -12,9 +12,9 @@
 			<input type="radio" id="artist" name="type" value="artist">
 			<label for="artist" title="With this option all the events performed by a certain artists will be displayed">Artist</label>
 			<input type="radio" id="location" name="type" value="location">
-			<label for="location" title="In radius mode this will show you all the events next to location you enter">Radius</label>
-			<input type="radio" id="venue" name="type" value="venue">
-			<label for="venue" title="This will return all the events taking place in the entered venue.">Venue</label>
+			<label for="location" title="In radius mode this will show you all the events next to location you enter">Location</label>
+			<!-- <input type="radio" id="venue" name="type" value="venue">
+			<label for="venue" title="This will return all the events taking place in the entered venue.">Venue</label> -->
 		</div>
 
 		<select id="radius">
