--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,7 @@
 		<script src="@routes.Assets.at("javascripts/jquery-1.9.1.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/jquery-ui-1.10.3.custom.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/map/map.js")" type="text/javascript"></script>
-		<script src="https://open.mapquestapi.com/sdk/js/v7.0.s/mqa.toolkit.js?key=Fmjtd%7Cluubn9uan9%2Cal%3Do5-902296"></script>
+		<script src="http://www.mapquestapi.com/sdk/js/v7.2.s/mqa.toolkit.js?key=L6byZBnZ6yRMpdIgqGPm6Gssc63QfgYH"></script>
 		<style type="text/css">
 			@@-moz-document url-prefix() {
 			div#overlay.header button#submit {
