updated last.fm API key, formatting, added minimal docu

--- a/app/views/map.scala.html
+++ b/app/views/map.scala.html
@@ -1,6 +1,6 @@
 @(message: String, requestForm: Form[Request])
 @import helper._
-@main("Welcome to SEM", message) {
+@main("Welcome!", message) {
 <div id="container">
 	<div id='dpanel'></div>
 	<div id="overlay" class="shadow center ui-corner-all">
